--- a/templates/index.html
+++ b/templates/index.html
@@ -1,53 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Mission to Mars</title>
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    />
-  </head>
-  <body>
-    <div class="container">
-      <!-- Add Jumbotron to Header -->
-      <div class="jumbotron text-center">
-        <h1>Mission to Mars</h1>
-        <!-- Add a button to activate scraping script -->
-        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
-      </div>
-      <!-- Add section for Mars News -->
-      <div class="row" id="mars-news">
-        <div class="col-md-12">
-          <div class="media">
-            <div class="media-body">
-              <h2>Latest Mars News</h2>
-              <h4 class="media-heading">{{ mars.news_title }}</h4>
-              <p>{{ mars.news_paragraph }}</p>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Mission to Mars</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        />
+    </head>
+    <body>
+        <div class="container">
+            <div class="jumbotron text-center">
+                <h1>Mission to Mars</h1>
+                <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
             </div>
-          </div>
+            <!-- Mars News -->
+            <div class="row" id="mars-news">
+                <div class="col-md-12">
+                    <div class="media">
+                        <div class="media-body">
+                            <h2>Latest Mars News</h2>
+                            <h4 class="media-heading">{{mars.news_title}}</h4>
+                            <p>{{mars.news_paragraph}}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Featured Image --> 
+            <div class="row" id="mars-featured-image">
+                <div class="col-md-8">
+                    <h2>Featured Mars Image</h2>
+                    <img
+                        src="{{mars.featured_image }}"
+                        class="img-responsive"
+                        alt="Responsive image"
+                    />
+                </div>
+                <!-- Mars Facts -->
+                <div class="col-md-4">
+                    <div class="row" id="mars-facts">
+                        <h4>Mars Facts</h4>
+                        <table class="table table-dark">
+                        {{ mars.facts | safe }}
+                        </table>
+                        <p><a class="btn btn-secondary btn-sm" href="https://space-facts.com/mars/" role="button">Discover More</a></p>
+                    </div>
+                </div>
+            </div>
+            <!-- Hemispheres -->
+            <div class="row" id="hemisphere images">
+                <h2>Hemisphere Images</h2>
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="thumbnail">
+                            <a href="{{mars.cerberus_img}}">
+                                <img src="{{mars.cerberus_img}}" alt="cerberus" style="width:100%">
+                                <div class="caption">
+                                    <p>{{mars.cerberus_title}}</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="thumbnail">
+                            <a href="{{mars.schiaparelli_img}}">
+                                <img src="{{mars.schiaparelli_img}}" alt="schiaparelli" style="width:100%">
+                                <div class="caption">
+                                    <p>{{mars.schiaparelli_title}}</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="thumbnail">
+                            <a href="{{mars.syrtis_img}}">
+                                <img src="{{mars.syrtis_img}}" alt="syrtis" style="width:100%">
+                                <div class="caption">
+                                    <p>{{mars.syrtis_title}}</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="thumbnail">
+                            <a href="{{mars.valles_img}}">
+                                <img src="{{mars.valles_img}}" alt="valles" style="width:100%">
+                                <div class="caption">
+                                    <p>{{mars.valles_title}}</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-      <!-- Section for Featured Image and Facts table -->
-      <div class="row" id="mars-featured-image">
-        <div class="col-md-8">
-          <h2>Featured Mars Image</h2>
-          <img
-            src="{{mars.featured_imag }}"
-            class="img-responsive"
-            alt="Responsive image"
-          />
-        </div>
-        <div class="col-md-4">
-          <!-- Mars Facts -->
-          <div class="row" id="mars-facts">
-            <h4>Mars Facts</h4>
-            {{ mars.facts | safe }}
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
+    </body>
 </html>
